--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ streamlit>=1.0.0
 fastapi>=0.100.0
 uvicorn>=0.23.2
 langchain>=0.2.0
-langchain-google-genai>=0.0.12 # Or the latest version
+langchain-google-genai>=0.0.12
 langgraph>=0.0.30
-faiss-cpu>=1.7.4 # or faiss-gpu if you have a GPU
-pypdf>=3.17.1 # For PDF document loading
-unstructured>=0.12.6 # For general document loading
+faiss-cpu>=1.7.4 
+pypdf>=3.17.1
+unstructured>=0.12.6 
 beautifulsoup4>=4.12.2
 requests>=2.31.0
 python-dotenv>=1.0.0
 gTTS>=2.4.0
 SpeechRecognition>=3.10.0
-soundfile>=0.12.1 # Often a dependency for audio processing
-pydub>=0.25.1 # For audio manipulation (optional, but useful)
+soundfile>=0.12.1 
+pydub>=0.25.1 
+langchain_community==0.3.24
+yfinance>=0.2.24 
+streamlit-mic-recorder
